# text_analys

./: .gitignore  Dockerfile  akembic.ini  docker-compose.yml  download.py  nginx_default.conf  old_pyproject.toml  pyproject.toml  requirements.txt
app/: settings.py
app/db/: base.py  utils.py
app/ei/: base.py  dependancy.py
app/web/: application.py  lifetime.py
app/web/endpoints/: router.py
app/web/endpoints/text/: __init__.py  views.py
