[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Evgeniy <e.tabashnyuk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.12.1"
amqp = "5.1.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
asyncpg = "0.28.0"
autopep8 = "1.7.0"
billiard = "4.1.0"
celery = "5.3.4"
certifi = "2023.7.22"
cfgv = "3.4.0"
charset-normalizer = "3.3.1"
click = "8.1.7"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
distlib = "0.3.7"
dnspython = "2.4.2"
email-validator = "2.1.0.post1"
exceptiongroup = "1.1.3"
fastapi = "0.104.0"
filelock = "3.12.4"
flake8 = "5.0.4"
flower = "1.2.0"
greenlet = "3.0.1"
gunicorn = "20.1.0"
h11 = "0.14.0"
hiredis = "2.2.3"
httpcore = "0.16.3"
httpx = "0.23.3"
humanize = "4.8.0"
identify = "2.5.30"
idna = "3.4"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
joblib = "1.3.2"
kombu = "5.3.2"
mako = "1.2.4"
markupsafe = "2.1.3"
mccabe = "0.7.0"
multidict = "6.0.4"
nltk = "3.8.1"
nodeenv = "1.8.0"
numpy = "1.25.2"
packaging = "23.2"
platformdirs = "3.11.0"
pluggy = "1.3.0"
pre-commit = "2.21.0"
prometheus-client = "0.17.1"
prompt-toolkit = "3.0.39"
psycopg2-binary = "2.9.9"
pycodestyle = "2.9.1"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
pydantic-core = "2.10.1"
pyflakes = "2.5.0"
pytest = "7.4.3"
pytest-httpx = "0.21.3"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pytz = "2022.7.1"
pyyaml = "6.0.1"
redis = "5.0.1"
regex = "2023.10.3"
requests = "2.31.0"
rfc3986 = "1.5.0"
scikit-learn = "1.3.2"
scipy = "1.9.3"
sentry-sdk = "1.32.0"
six = "1.16.0"
sniffio = "1.3.0"
sqladmin = "0.10.3"
sqlalchemy = "1.4.49"
starlette = "0.27.0"
tenacity = "8.2.3"
threadpoolctl = "3.2.0"
toml = "0.10.2"
tomli = "2.0.1"
tornado = "6.3.3"
tqdm = "4.66.1"
typing-extensions = "4.8.0"
tzdata = "2023.3"
urllib3 = "2.0.7"
uvicorn = "0.18.3"
vine = "5.0.0"
virtualenv = "20.24.6"
wcwidth = "0.2.8"
wtforms = "3.1.0"
yarl = "1.9.2"
gensim = "3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
